--- a/themes/chunglab/_config.yml
+++ b/themes/chunglab/_config.yml
@@ -17,7 +17,7 @@ fancybox: true # whether or not to load the fancybox library
 disqus_shortname: 
 google_analytics:
 swiftype_install_key: 
-google_api_key: AIzaSyD7RT6pmLegZhafuIFidWxy23MpGFV8-Gw
+google_api_key: AIzaSyBJQ8sEcJSnPYzILK6O6eH75Jz3JDOlvEo
 
 # Social
 social:
@@ -31,6 +31,7 @@ favicon: /favicon.ico # path from root of hexo site
 default_author: Anonymous
 
 about: Flexible Electronics Group at POSTECH
+description: "Flexible Electronics Group at POSTECH2"
 professor:
   name: Yoonyoung Chung
   phone: +82-54-279-2225
