fix: 메뉴 Achivement -> Achievement

--- a/themes/chunglab/_config.yml
+++ b/themes/chunglab/_config.yml
@@ -3,7 +3,7 @@ menu:
   Home: /
   Research: /research/
   People: /people/
-  Achivements: /archives/
+  Achievements: /archives/
   Openings: /openings/
   Contact: /contact/
    
