Achievements 메뉴의 landing페이지를 publication category 페이지로 변경

--- a/themes/chunglab/_config.yml
+++ b/themes/chunglab/_config.yml
@@ -3,7 +3,7 @@ menu:
   Home: /
   Research: /research/
   People: /people/
-  Achievements: /archives/
+  Achievements: /categories/Publication/
   Openings: /openings/
   Contact: /contact/
    
