--- a/_config.yml
+++ b/_config.yml
@@ -9,11 +9,11 @@ description: Flexible Electronics Group at POSTECH
 keywords:
 author: Jayden Yoo
 language:
-timezone:
+timezone: ROK
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: http://chunglab.postech.ac.kr
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -74,7 +74,6 @@ pagination_dir: page
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 theme: chunglab
-#theme: landscape
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
