feat: news에 구분선 추가

--- a/themes/chunglab/_config.yml
+++ b/themes/chunglab/_config.yml
@@ -56,34 +56,34 @@ banners:
   - src: /assets/images/banners/banner-3.jpg
 news:
   - message: |
-      Inyeol wins an excellence award at the 5th Bio Startup Idea Competition (http://biostartup.jobkorea.co.kr). Congratulations!
+      Inyeol wins an excellence award at the 5th Bio Startup Idea Competition (http://biostartup.jobkorea.co.kr). Congratulations!<br>
       (May. 2018)
-
-      Taewon joins our group. Welcome!
+      <hr>
+      Taewon joins our group. Welcome!<br>
       (Feb. 2018)
-
-      Seongmin and Hyuk gives excellent presentations about their research on flexible devices at the 2017 MRS Fall Meeting in Boston.
+      <hr>
+      Seongmin and Hyuk gives excellent presentations about their research on flexible devices at the 2017 MRS Fall Meeting in Boston.<br>
       (Nov. 2017)
-
-      Inyeol and Jinpyo exhibits their work on the wearable sensor platform to prevent Sudden Infant Death Syndrome at the Tech Fair organized by the Center for Advanced Soft Electronics. Well done!
+      <hr>
+      Inyeol and Jinpyo exhibits their work on the wearable sensor platform to prevent Sudden Infant Death Syndrome at the Tech Fair organized by the Center for Advanced Soft Electronics. Well done!<br>
       (Nov. 2017)
-
-      Prof. Chung gives a special lecture on e-paper technologies at the LG Display Technical Talk.
+      <hr>
+      Prof. Chung gives a special lecture on e-paper technologies at the LG Display Technical Talk.<br>
       (Jun. 2017)
   - message: |
-      Jinpyeo, an undergraduate intern, gets early admission to POSTECH. He will join our graduate program in Spring 2018. Congratulations!
+      Jinpyeo, an undergraduate intern, gets early admission to POSTECH. He will join our graduate program in Spring 2018. Congratulations!<br>
       (Jan. 2017)
-
-      A team of Prof. Yoonyoung Chung (Co-PI), Prof. Ho-Jin Song (PI), and Prof. Wonbin Hong (Co-PI) at POSTECH EE is chosen as the recipient of the prestigious ICT research award from Samsung Future Technology Foundation. The groundbreaking research aims to develop massive MIMO beamforming technologies with flexible electronics.
+      <hr>
+      A team of Prof. Yoonyoung Chung (Co-PI), Prof. Ho-Jin Song (PI), and Prof. Wonbin Hong (Co-PI) at POSTECH EE is chosen as the recipient of the prestigious ICT research award from Samsung Future Technology Foundation. The groundbreaking research aims to develop massive MIMO beamforming technologies with flexible electronics.<br>
       (Sep. 2016)
-
-      Seongmin joins our group. Welcome!
+      <hr>
+      Seongmin joins our group. Welcome!<br>
       (Sep. 2016)
-
-      Two graduate students Inyeol and Hyuk joins our group. Let's celebrate a new beginning!
+      <hr>
+      Two graduate students Inyeol and Hyuk joins our group. Let's celebrate a new beginning!<br>
       (Mar. 2016)
-
-      Professor Yoonyoung Chung joins the EE department at POSTECH as an assistant professor.
+      <hr>
+      Professor Yoonyoung Chung joins the EE department at POSTECH as an assistant professor.<br>
       (Feb. 2015)
 
 sponsors:
